--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,15 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-common-types": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@prisma/client": "^4.16.0",
-    "@types/bcrypt": "^5.0.0",
     "@types/node": "^20.3.1",
-    "bcrypt": "^5.1.0",
-    "prisma": "^4.16.0",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
