--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@prisma/client": "^4.16.0",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "prisma": "^4.16.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
