--- a/back-end/package.json
+++ b/back-end/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
-    "dev": "ts-node-dev src/index.ts"
+    "dev": "node index.ts",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
