--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,7 +7,7 @@
     "node": "18.x"
   },
   "scripts": {
-    "dev": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts",
     "postinstall": "prisma generate"
   },
   "keywords": [],
