--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@tanstack/react-query": "^4.32.6",
     "axios": "^1.4.0",
     "lucide-react": "^0.265.0",
