fix(prisma): Fix error with exporting prisma client
Fix problem which was crashing site because of exporting
prisma client directly from index.ts.
Moved prisma client to lib/prismaClient.ts and modified
imports paths in model files.

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,12 +2,13 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "engines": {
     "node": "18.x"
   },
   "scripts": {
-    "dev": "node index.ts",
+    "build": "tsc",
+    "dev": "ts-node index.ts",
     "postinstall": "prisma generate"
   },
   "keywords": [],
